<resources>
    <string name="app_name">B6_Quiz</string>
    <string name="startscreenbutton1"><![CDATA[Students & teachers]]></string>
    <string name="startscreenbutton2">Non-student</string>
    <string name="startscreenbutton3">Play without account</string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="registerbutton">Register now!</string>
    <string name="signinhint1">mail</string>
    <string name="signinhint2">Password</string>
    <string name="signin">Sign in</string>
    <string name="screenlabelsignin">sign in</string>
    <string name="profile_title">My Profile</string>
    <string name="settings_title">Settings</string>
    <string name="settings_btn_desc">Settings button</string>
    <string name="back_btn_desc">Back button</string>
    <string name="profile_name">Pingvinen</string>
    <string name="btn_myquiz">My Quizzes</string>
    <string name="btn_logout">Log Out</string>
    <string name="profil_desc">Profile picture</string>
    <string name="registerHintMail">enter your e-mail</string>
    <string name="registerHintUsername">username</string>
    <string name="registerHintPassword">password</string>
    <string name="registerHintRepeatPassword">repeat password</string>
    <string name="registerBTN">Register account</string>
    <string name="registerAdditional">setup your profile</string>
    <string name="forgotLoginDesc">forgot login info</string>
    <string name="registerLanguage">choose language</string>
    <string name="signUp">Finish</string>

    <string name="quizcode">Quiz Code</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="join_title">Join a game</string>
    <string name="quiz_logo">Logo</string>
    <string name="quiz_ongoing_slogan">Being busy!</string>
    <string name="q1_question">Hvilket udtryk er en tildeling? (assignment)</string>
    <string name="q1_answer1">int a;</string>
    <string name="q1_answer2">a = 2;</string>
    <string name="q1_answer3">a == 2</string>
    <string name="q1_answer4">a >= 2</string>
    <string name="q2_question">Hvilken metode er ulovlig?</string>
    <string name="q2_answer1">int sum() {return 0;}</string>
    <string name="q2_answer2">int størreEnd (int a, int b) { return a>b; }</string>
    <string name="q2_answer3">boolean størreEnd (int a, int b) { return a>b;}</string>
    <string name="q2_answer4">int sum (int a, int b) { return a+b; }</string>
    <string name="quiz_result">Du har gennemført quizzen, du fik %d ud af %d rigtige!</string>
    <string name="quiz_end_button">Tilbage til start skærm</string>
    <string name="studentsigninhint1">Student mail</string>
    <string name="studentsigninhint2">Student password</string>
    <string name="hejscreenlabelsignin">student sign in</string>
    <string name="createquizlabel">Create your quiz</string>
    <string name="enterUrl">enter url here</string>
    <string name="help">Help</string>
    <string name="createquizbtn">Create quiz</string>
    <string name="createQuizTXT">create quiz</string>
    <string name="quiz_answer_placeholder">Submit</string>
    <string name="quiz_question_placeholder">Question</string>
    <string name="forgotPWbutton">Forgot your password?</string>
    <string name="submit">Submit</string>
    <string name="question_number">%d of %d</string>
    <string name="logo">QUIZR</string>
    <string name="courseIDTXT">Course ID</string>
    <string name="courseNotImplemented">Sorry! This feature has not yet been implemented</string>
    <string name="joinCourseBTN_TXT">Join</string>
    <string name="joinCourseTITLE">Join new course</string>
    <string name="my_courses">My courses</string>
    <string name="separator">Or</string>
    <string name="my_quizzes_title">My Quizzes</string>
    <string name="myquizzes_listitem_navn">Quiz Navn</string>
    <string name="myquizzes_listitem_quizcode">Quiz kode</string>
    <string name="slet_quiz_knap">Slet quiz knap</string>
    <string name="my_profile">My profile</string>
    <string name="home">Home</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="background_image">Background Image</string>
    <string name="log_out">Log Out</string>
    <string name="quizzes_taken_placeholder">15</string>
    <string name="quizzes_taken">Quizzes Taken</string>
    <string name="quizzes_created_placeholder">3</string>
    <string name="quizzes_created">Quizzes Created</string>
    <string name="courses_taken_placeholder">2</string>
    <string name="courses_taken">Courses Taken</string>
    <string name="howTo">How to:</string>
    <string name="helpText">1) Fill out this template:</string>
    <string name="templateLink"><a href="https://drive.google.com/open?id=1GRdDiwOkE3BNxpC1cSLRTlle8ixTWuskk_blkwfla4A">Quiz Template</a></string>
    <string name="helpText2">2) Click share and copy the link into the Create Quiz form</string>
    <string name="profile_picture">Profile picture</string>
    <string name="language">language</string>
</resources>
