<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#86AAEC"
    android:elevation="4dp">

    <ImageView
        android:contentDescription="@string/back_btn_desc"
        android:id="@+id/profile_toolbar_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:src="@drawable/back_button2"
        />

    <TextView
        android:id="@+id/profile_toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <ImageView
        android:contentDescription="@string/settings_btn_desc"
        android:id="@+id/profile_toolbar_settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:src="@drawable/settings_icon"
        android:layout_marginEnd="16dp"
        android:onClick="settings"
        />

</androidx.appcompat.widget.Toolbar>