<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1DBED"
    tools:context=".Sign_in.RegisterAct">

    <ImageView
        android:id="@+id/btnGoBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back_btn_desc"
        android:src="@drawable/back_button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/greyscale"
        android:textColor="@color/logoColor"
        android:text="@string/logo"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/join_title"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:gravity="center"
        android:hint="@string/registerHintMail"
        android:background="@drawable/button_shape"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubTitle" />


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registerHintPassword"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMail" />

    <EditText
        android:id="@+id/txtRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:hint="@string/registerHintRepeatPassword"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape_green"
        android:stateListAnimator="@null"
        android:text="@string/registerBTN"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRepeatPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>