<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in.StudentSigninAct"
    android:background="#D1DBED">

    <ImageView
        android:id="@+id/btnGoBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back_btn_desc"
        android:src="@drawable/back_button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/greyscale"
        android:textColor="@color/logoColor"
        android:text="@string/logo"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hejscreenlabelsignin"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/txtStudentMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_shape"
        android:importantForAutofill="no"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/studentsigninhint1"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitle" />

    <EditText
        android:id="@+id/txtStudentPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/studentsigninhint2"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentMail" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape_green"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentPW" />

</androidx.constraintlayout.widget.ConstraintLayout>